--- a/packages/storybook-html/src/components/grid-menu/grid-menu.html
+++ b/packages/storybook-html/src/components/grid-menu/grid-menu.html
@@ -11,7 +11,7 @@
 <ul class="grid-menu">
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 1</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -20,7 +20,7 @@
   </li>
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 2</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -29,7 +29,7 @@
   </li>
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 3</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -38,7 +38,7 @@
   </li>
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 4</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -47,7 +47,7 @@
   </li>
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 5</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -60,7 +60,7 @@
 <ul class="grid-menu grid-menu--dark-text">
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 1</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -69,7 +69,7 @@
   </li>
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 2</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -78,7 +78,7 @@
   </li>
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 3</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -87,7 +87,7 @@
   </li>
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 4</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -96,7 +96,7 @@
   </li>
   <li class="grid-menu__item">
     <a href="#" class="grid-menu__link">
-      <span class="grid-menu__icon icon icon-bed"></span>
+      <span class="grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
       <span class="grid-menu__title">Menu link 5</span>
       <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
         luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
@@ -127,10 +127,10 @@
 
 <h2>Grid menu with icons</h2>
 <ul class="grid-menu">
-  <li><a href="#"><span class="grid-menu__icon icon icon-car"> </span> <span class="grid-menu__title">Menu link 1</span></a></li>
-  <li><a href="#"><span class="grid-menu__icon icon icon-bus"> </span> <span class="grid-menu__title">Menu link 2</span></a></li>
-  <li><a href="#"><span class="grid-menu__icon icon icon-ship"> </span> <span class="grid-menu__title">Menu link 3</span></a></li>
-  <li><a href="#"><span class="grid-menu__icon icon icon-train"> </span> <span class="grid-menu__title">Menu link 4</span></a></li>
-  <li><a href="#"><span class="grid-menu__icon icon icon-plane"> </span> <span class="grid-menu__title">Menu link 5</span></a></li>
-  <li><a href="#"><span class="grid-menu__icon icon icon-motorcycle"> </span> <span class="grid-menu__title">Menu link 6</span></a></li>
+  <li><a href="#"><span class="grid-menu__icon uq-icon uq-icon--car-1"> </span> <span class="grid-menu__title">Menu link 1</span></a></li>
+  <li><a href="#"><span class="grid-menu__icon uq-icon uq-icon--bus"> </span> <span class="grid-menu__title">Menu link 2</span></a></li>
+  <li><a href="#"><span class="grid-menu__icon uq-icon uq-icon--sea-transport-boat"> </span> <span class="grid-menu__title">Menu link 3</span></a></li>
+  <li><a href="#"><span class="grid-menu__icon uq-icon uq-icon--railroad-train-1"> </span> <span class="grid-menu__title">Menu link 4</span></a></li>
+  <li><a href="#"><span class="grid-menu__icon uq-icon uq-icon--icon-plane-1"> </span> <span class="grid-menu__title">Menu link 5</span></a></li>
+  <li><a href="#"><span class="grid-menu__icon uq-icon uq-icon--bicycle"> </span> <span class="grid-menu__title">Menu link 6</span></a></li>
 </ul>
