--- a/packages/core/src/scss/_partials/_media-constants.scss
+++ b/packages/core/src/scss/_partials/_media-constants.scss
@@ -1,64 +1,26 @@
 @use 'space' as space;
 
-// FS: custom media & breakpoints (from a mobile first perspective)
+/* Breakpoints */
 
-/* Note that the width values are written as ranges
- * (https://www.w3.org/TR/mediaqueries-5/#mq-range-context).
- * Evaluating media features in range context is new to Level 4 of media queries
- * specification (not supported in major browsers yet).
- */
-
-// Original post-css-custom-media syntax
-// =====================================
-
-// @custom-media --x-small-up (width >= 420px);
-// @custom-media --x-small-down (width < 420px);
-// @custom-media --x-small-to-small (420px <= width < 540px);
-// /* Small */
-// @custom-media --small-up (width >= 540px);
-// @custom-media --small-down (width < 540px);
-// @custom-media --small-to-medium (540px <= width < 720px);
-// /* Medium */
-// @custom-media --medium-up (width >= 641px);
-// @custom-media --medium-down (width < 641px);
-// @custom-media --medium-to-large (641px <= width < 1024px);
-// /* Large */
-// @custom-media --large-up (width >= 1024px);
-// @custom-media --large-down (width < 1024px);
-// @custom-media --large-to-x-large (1024px <= width < 1140px);
-// /* Extra large */
-// @custom-media --x-large-up (width >= 1140px);
-// @custom-media --x-large-down (width < 1140px);
-
-// Converted (Sass) variables
-// ==========================
-
-// Breakpoints
-// -----------
-
-// !! Please try to keep these to multiples of 8px (0.5rem)
-
-// Considered to be the "mobile" sizes in discussion
 // Firstly the trivial 0 size (of course), then:
-$screen-xs: 26rem !default; // ~416px
-$screen-sm: 34rem !default; // ~544px
+$screen-xs: 26rem !default; // ~416px (DEPRECATED)
+$screen-sm: 34rem !default; // ~544px (DEPRECATED)
 
 // Considered to be the "tablet" sizes in discussion
-$screen-md: 48rem !default; // ~768px
-$screen-lg: 64rem !default; // ~1024px
+$screen-md: 37.5rem !default; // ~600px
+$screen-lg: 64rem !default; // ~1024px (DEPRECATED)
 
 // Considered to be the "desktop" size in discussion
-$screen-xl: 90rem !default; // ~1440px
+$screen-xl: 75rem !default; // ~1200px
 
-// Media query strings
-// -------------------
+/* Media query strings */
 
-// x-small 
+// x-small (DEPRECATED)
 $screen-xs-up: "(min-width: #{$screen-xs})" !default;
 $screen-xs-down: "(max-width: #{$screen-xs - 0.0625rem})" !default;
 $screen-xs-sm: "(min-width: #{$screen-xs}) and (max-width: #{$screen-sm - 0.0625rem})" !default;
 
-// small
+// small (DEPRECATED)
 $screen-sm-up: "(min-width: #{$screen-sm})" !default;
 $screen-sm-down: "(max-width: #{$screen-sm - 0.0625rem})" !default;
 $screen-sm-md: "(min-width: #{$screen-sm}) and (max-width: #{$screen-md - 0.0625rem})" !default;
@@ -68,7 +30,7 @@ $screen-md-up: "(min-width: #{$screen-md})" !default;
 $screen-md-down: "(max-width: #{$screen-md - 0.0625rem})" !default;
 $screen-md-lg: "(min-width: #{$screen-md}) and (max-width: #{$screen-lg - 0.0625rem})" !default;
 
-// large
+// large (DEPRECATED)
 $screen-lg-up: "(min-width: #{$screen-lg})" !default;
 $screen-lg-down: "(max-width: #{$screen-lg - 0.0625rem})" !default;
 $screen-lg-xl: "(min-width: #{$screen-lg}) and (max-width: #{$screen-xl - 0.0625rem})" !default;
@@ -76,5 +38,3 @@ $screen-lg-xl: "(min-width: #{$screen-lg}) and (max-width: #{$screen-xl - 0.0625
 // x-large
 $screen-xl-up: "(min-width: #{$screen-xl})" !default;
 $screen-xl-down: "(max-width: #{$screen-xl - 0.0625rem})" !default;
-
-// TODO: add screen density mq's
