--- a/packages/grid/src/scss/_component.scss
+++ b/packages/grid/src/scss/_component.scss
@@ -1,12 +1,10 @@
 @use "@uqds/core/src/scss/global" as core;
 @use 'global' as *;
 
-$shadow-column-count: 24;
-
 /**
  * Grid container (incl. full width modifier class)
  */
-@include grid-row(12, 'xl', 24) {
+@include grid-row(12, 'xl') {
   &:not(.uq-grid--full-width) {
     @include layout-containment; // contain the first grid wrapper by default
   }
@@ -16,16 +14,16 @@ $shadow-column-count: 24;
     @include layout-full-width;
   }
 };
-@include grid-col-span-classes(8, 'md', $shadow-column-count);
-@include grid-col-span-classes(6, null, $shadow-column-count);
+@include grid-col-span-classes(8, 'md');
+@include grid-col-span-classes(6);
 
 @media #{core.$screen-md-up} {
-  @include grid-col-span-classes(12, 'xl', $shadow-column-count);
-  @include grid-col-span-classes(8, 'md', $shadow-column-count);
+  @include grid-col-span-classes(12, 'xl');
+  @include grid-col-span-classes(8, 'md');
 }
 
 @media #{core.$screen-xl-up} {
-  @include grid-col-span-classes(12, 'xl', $shadow-column-count);
+  @include grid-col-span-classes(12, 'xl');
 }
 
 /**
