--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -69,7 +69,7 @@
 
     &__column {
         flex: 1 1 100%;
-        padding: core.$space-none (map-get($map: grid.$gutter-width, $key: "base") / 2) core.$space-none core.$space-none;
+        padding: core.$space-none (nth(grid.$schema-base, 2) / 2) core.$space-none core.$space-none;
 
         + .uq-footer__column {
             flex: 1 1 100%;
@@ -85,11 +85,11 @@
 
         @media #{core.$screen-md-up} {
             flex: 3 1 75%;
-            padding-right: map-get($map: grid.$gutter-width, $key: "md") / 2;
+            padding-right: nth(grid.$schema-md, 2) / 2;
         }
 
         @media #{core.$screen-lg-up} {
-            padding-right: map-get($map: grid.$gutter-width, $key: "xl") / 2;
+            padding-right: nth(grid.$schema-xl, 2) / 2;
         }
     }
 
