--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -1,7 +1,7 @@
 @use '@uqds/core/src/scss/global' as core;
 @use 'global' as *;
 
-.grid-menu {
+.uq-grid-menu {
   box-sizing: border-box;
   display: grid;
   list-style: none;
@@ -67,12 +67,12 @@
       }
 
       a,
-      .grid-menu__description {
+      .uq-grid-menu__description {
         color: $linked-list-color-hover;
         text-decoration: none;
       }
 
-      .grid-menu__icon {
+      .uq-grid-menu__icon {
         filter: core.$filter-white;
       }
     }
@@ -101,7 +101,7 @@
 
   // Dark text variant.
   &--dark-text {
-    .grid-menu__link,
+    .uq-grid-menu__link,
     a {
       color: core.$dark-palette-color;
     }
@@ -114,16 +114,16 @@
 
 // Palettes applied to section wrapping grid-menu.
 .light-palette {
-  .grid-menu {
+  .uq-grid-menu {
     a,
-    .grid-menu__description {
+    .uq-grid-menu__description {
       @extend %light-palette;
 
       &:hover {
         background-color: core.$light-palette-link-color;
         color: core.$link-color;
 
-        .grid-menu__description {
+        .uq-grid-menu__description {
           background-color: core.$light-palette-link-color;
           color: core.$link-color;
         }
@@ -133,16 +133,16 @@
 }
 
 .dark-palette {
-  .grid-menu {
+  .uq-grid-menu {
     a,
-    .grid-menu__description {
+    .uq-grid-menu__description {
       @extend %dark-palette;
 
       &:hover {
         background-color: core.$link-color;
         color: core.$uq-white;
 
-        .grid-menu__description {
+        .uq-grid-menu__description {
           background-color: core.$link-color;
           color: core.$uq-white;
         }
@@ -153,7 +153,7 @@
 
 // Grid menu inside a section with background image.
 .section--background-image {
-  .grid-menu {
+  .uq-grid-menu {
     a {
       border-color: rgba(core.$uq-white, .4);
     }
