--- a/packages/storybook-html/src/components/grid-menu/grid-menu-equalised.html
+++ b/packages/storybook-html/src/components/grid-menu/grid-menu-equalised.html
@@ -1,8 +1,9 @@
-<ul class="grid-menu">
-  <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Refresh to see me equalise!</span></a></li>
-  <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 2</span></a></li>
-  <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
-  <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 4</span></a></li>
-  <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 5</span></a></li>
-  <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 6</span></a></li>
+<h2>Grid menu equalised (JS)</h2>
+<ul class="uq-grid-menu">
+  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
+  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
+  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+  <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
 </ul>
