--- a/packages/storybook-html/src/components/core/_colour.scss
+++ b/packages/storybook-html/src/components/core/_colour.scss
@@ -211,3 +211,20 @@
   .uqds-text-color{
     color: $text;
   }
+
+  /* Alerts 
+  .uqds-colour--info{
+    background-color: $alert-info-bg-color;
+  }
+  .uqds-colour--success{
+    background-color: $alert-success-bg-color;
+  }
+  .uqds-colour--warning{
+    background-color: $alert-warning-bg-color;
+  }
+  .uqds-colour--danger{
+    background-color: $alert-danger-bg-color;
+  }*/ 
+
+
+  
