storybook-html: pagination example to use UQDS utility class

--- a/packages/storybook-html/src/components/pagination/pagination.html
+++ b/packages/storybook-html/src/components/pagination/pagination.html
@@ -1,4 +1,4 @@
-<section class="text-center">
+<section class="text--center">
 <ul class="pagination">
     <li class="pagination__item pagination__item--first pagination__item--current"><a class="pagination__link" title="Go to page 1" href="#">1</a></li>
     <li class="pagination__item"><a class="pagination__link" title="Go to page 2" href="#">2</a></li>
