--- a/packages/sections/src/scss/_component.scss
+++ b/packages/sections/src/scss/_component.scss
@@ -206,7 +206,7 @@
     }
   }
 
-  // Message indicating section requires saving, when user saves panel modal
+  // Message indicating section requires saving, when user saves panel modal (DRUPAL?)
   &__update {
     &-message {
       @extend %dark-palette;
