--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -86,6 +86,10 @@ $text: $uq-neutral-dark80; //#2b2b2b;
 $external-link-icon-color: $uq-neutral-dark20; //bbb;
 // Alerts
 $alert: $uq-red-dark20; //B80017;
+$info-color: #D4F0FF !default; //#D4F0FF !default;
+$success-color: #D5EECA !default; //#D5EECA!default;
+$warning-color: #FFE0AD !default; //#FFE0AD!default;
+$danger-color: #F4ACAC !default; //#F4ACAC!default;
 
 // Vertical lists
 $vertical-list-border: $uq-neutral-light40; //EDEDED;
